fixing image (it was way too large)

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ footer {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 90%;
+  width: 50%;
 }
 
 /*changing text fonts and sizes*/
